@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+4/27/18: Fixed failure to clear existing summed frame list when reading in new
+settings file (In 3.6).
+
 4/26/18: SEM_3-6-16
 4/12/18: Fixed uninitialized pointer causing crash when aligning with K2.
 
